--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+"hello"
     <section class="hero-area-fix">
         <div class="hero-area" id="water">
             <div class="container">
